tests/baselines/reference/arityErrorRelatedSpanBindingPattern.errors.txt
arityErrorRelatedSpanBindingPattern.ts(5,1): error TS2554: Expected 3 arguments, but got 2.
arityErrorRelatedSpanBindingPattern.ts(7,1): error TS2554: Expected 3 arguments, but got 2.


==== arityErrorRelatedSpanBindingPattern.ts (2 errors) ====
    function foo(a, b, {c}): void {}
    
    function bar(a, b, [c]): void {}
    
    foo("", 0);
    ~~~
!!! error TS2554: Expected 3 arguments, but got 2.
!!! related TS6211 arityErrorRelatedSpanBindingPattern.ts:1:20: An argument matching this binding pattern was not provided.
    
    bar("", 0);
    ~~~
!!! error TS2554: Expected 3 arguments, but got 2.
!!! related TS6211 arityErrorRelatedSpanBindingPattern.ts:3:20: An argument matching this binding pattern was not provided.
    